compiler/testData/cli/jvm/localTypeAliasesError.out
compiler/testData/cli/jvm/localTypeAliases.kt:4:5: error: the feature "local type aliases" is experimental and should be enabled explicitly. This can be done by supplying the compiler argument '-XXLanguage:+LocalTypeAliases', but note that no stability guarantees are provided.
    typealias TA = String
    ^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
